tests/NormalTests/paczka1/fuzzy1/37773385.err
Error in line 11: fQUAJ A65 0,0
Error in line 5: 6ZbZPCsxS A922 46,2
Error in line 14: fQUAJ S103 25,3
Error in line 19: fQUAJ A44 59,3
Error in line 32: 6ZbZPCsxS S103 84,9
